Bug 97500 - If you try to open on a WebDAV server a file that doesn't exist, no error is shown
Summary: If you try to open on a WebDAV server a file that doesn't exist, no error is ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Giuseppe Castagno (aka beppec56)
URL:
Whiteboard: target:5.2.0 target:5.1.2
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-02 10:39 UTC by Giuseppe Castagno (aka beppec56)
Modified: 2016-10-25 19:12 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Giuseppe Castagno (aka beppec56) 2016-02-02 10:39:38 UTC
Version: 5.2.0.0.alpha0+
Build ID: 91c072b473beadda01a38dbc26086207c7b4d145
CPU Threads: 8; OS Version: Linux 3.13; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-02-02_06:12:27
Locale: en-US (en_US.UTF-8)

To reproduce you need to use a demo webdav server available on Internet, you need to save a file to server first, remove it, then try to open using the direct link.

1) login at: http://demo.openkm.com/OpenKM/login, choose whatever user+password you prefer from the list given there; login and password will be used to access the server from LO;

2) load a test file of your choice into LO from your PC;

3) select 'File > Save to remote server' from menu;

4) add the new server to the list of available server using the 'Add service' button, using the following setup:

Host: demo.openkm.com
port: 80
root: /OpenKM/webdav/

confirm and input user and password of point 1)

5) navigate to okm_personal/<user name> folder, verify that the file name you intend to save does not exist in the folder

6) Select the file name edit box and hit 'Save' button;

7) close the file. Now the direct link should be available on LO start page;

8) using the web interface of the server, remove the file just loaded: select file, right button =-> delete

9) now try to open the file using the direct link on LO start page

10) LO should show the error '$file does not exist' but it doesn't.

This is caused by the solution I opted to solve bug 96669.
Comment 1 Giuseppe Castagno (aka beppec56) 2016-02-02 10:40:54 UTC
Working on a fix...
Comment 2 Commit Notification 2016-02-09 07:51:49 UTC
Giuseppe Castagno committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f12e483589888f87843026ceff5ae3c1e615ca02

Fix tdf#97500 Reinstate missing file error dialog on WebDAV

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2016-02-12 08:30:41 UTC
Giuseppe Castagno committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a9abfefd469f5988bd116427d42d799e17264013&h=libreoffice-5-1

Fix tdf#97500 Reinstate missing file error dialog on WebDAV

It will be available in 5.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.