Fix tdf#97500 Reinstate missing file error dialog on WebDAV

Bug introduced with my fix to tdf#96669 in commit
5fc2910fc872bbd1184aaab7c842dff593d2449b.

Reverted previous fix and write a new version in fpicker instead.

On WebDAV better check if the stream opens first, then check
IsDocument property, because it may be a folder name.

Change-Id: I72ce728329e4194080db6fa4cc4d98fecf7672e9
Reviewed-on: https://gerrit.libreoffice.org/22214
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: jan iversen <jani@documentfoundation.org>
(cherry picked from commit f12e483589888f87843026ceff5ae3c1e615ca02)