ucb/source/ucp/webdav-neon/webdavcontent.cxx
@@ -865,7 +865,6 @@ void Content::addProperty( const ucb::PropertyCommandArgument& aCmdArg,
                     switch ( eType )
                     {
                     case UNKNOWN:
-                    case NOT_FOUND:
                     case DAV:
                         throw lang::IllegalArgumentException();
 
@@ -954,7 +953,6 @@ void Content::removeProperty( const OUString& Name,
                     switch ( eType )
                     {
                         case UNKNOWN:
-                        case NOT_FOUND:
                         case DAV:
                             throw beans::UnknownPropertyException();
 
@@ -1444,7 +1442,7 @@ uno::Reference< sdbc::XRow > Content::getPropertyValues(
         NeonUri aUri( xResAccess->getURL() );
         aUnescapedTitle = aUri.GetPathBaseNameUnescaped();
 
-        if ( eType == UNKNOWN || eType == NOT_FOUND )
+        if ( eType == UNKNOWN )
         {
             xProps.reset( new ContentProperties( aUnescapedTitle ) );
         }
@@ -1475,20 +1473,10 @@ uno::Reference< sdbc::XRow > Content::getPropertyValues(
                 "IsFolder",
                 uno::makeAny( false ),
                 true );
-            if ( eType == NOT_FOUND )
-            {
-                xProps->addProperty(
-                "IsDocument",
-                uno::makeAny( false ),
-                true );
-            }
-            else
-            {
-                xProps->addProperty(
+            xProps->addProperty(
                 "IsDocument",
                 uno::makeAny( true ),
                 true );
-            }
         }
     }
     else
@@ -2912,7 +2900,7 @@ Content::ResourceType Content::resourceTypeForLocks(
         }
     }
     osl::MutexGuard g(m_aMutex);
-    if ( m_eResourceTypeForLocks == UNKNOWN || m_eResourceTypeForLocks == NOT_FOUND )
+    if (m_eResourceTypeForLocks == UNKNOWN)
     {
         m_eResourceTypeForLocks = eResourceTypeForLocks;
     }
@@ -3450,7 +3438,7 @@ Content::ResourceType Content::getResourceType(
 {
     {
         osl::MutexGuard g(m_aMutex);
-        if ( m_eResourceType != UNKNOWN && m_eResourceType != NOT_FOUND ) {
+        if (m_eResourceType != UNKNOWN) {
             return m_eResourceType;
         }
     }
@@ -3499,10 +3487,6 @@ Content::ResourceType Content::getResourceType(
         {
             rResAccess->resetUri();
 
-            if ( e.getStatus() == SC_NOT_FOUND )
-            {
-                eResourceType = NOT_FOUND;
-            }
             if ( e.getStatus() == SC_METHOD_NOT_ALLOWED )
             {
                 // Status SC_METHOD_NOT_ALLOWED is a safe indicator that the
@@ -3526,7 +3510,7 @@ Content::ResourceType Content::getResourceType(
     }
 
     osl::MutexGuard g(m_aMutex);
-    if ( m_eResourceType == UNKNOWN || m_eResourceType == NOT_FOUND ) {
+    if (m_eResourceType == UNKNOWN) {
         m_eResourceType = eResourceType;
     } else {
         SAL_WARN_IF(
